--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,13 @@ torch
 torchvision
 torchaudio
 
+#Note: This project supports GPU acceleration using CUDA.
+
+### CUDA 12.1
+```bash
+pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
+```
+
 # Lightning (new + backward compatibility)
 lightning>=2.0
 pytorch-lightning
